Change trailer to array in media models + screenshots for media
