# spec/dashboard/games_openapi.yaml
@@ -1097,6 +1097,20 @@ components:
             ru: 
               - http://www.example.com/video/ce05bce1-48bf-4c01-ae14-046af4d1ca94
               - http://www.example.com/video/30083025-fe0c-4a22-b0a7-569ab6cee50b
+        screenshots:
+          type: object
+          additionalProperties:
+            type: array
+            items:
+              type: string
+              format: uri
+          example:
+            en:
+              - http://www.example.com/video/ce05bce1-48bf-4c01-ae14-046af4d1ca94
+              - http://www.example.com/video/30083025-fe0c-4a22-b0a7-569ab6cee50b
+            ru:
+              - http://www.example.com/video/ce05bce1-48bf-4c01-ae14-046af4d1ca94
+              - http://www.example.com/video/30083025-fe0c-4a22-b0a7-569ab6cee50b
         store:
           type: object
           properties:
